# Signatec_TestTask

./: .gitignore  CMakeLists.txt  ProcInfo.h  ProcessMonitor.cpp  ProcessMonitor.h  README.md  Signatec_TestTask.txt  UIManager.cpp  UIManager.h  main.cpp
test/: test.cpp
